Add initial port of defaults manager - just controls, not currently functional

--- a/vc2013_wx3/SAMnt_vc2013.vcxproj
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="..\src\basecase.cpp" />
     <ClCompile Include="..\src\case.cpp" />
     <ClCompile Include="..\src\casewin.cpp" />
+    <ClCompile Include="..\src\defaultsmanager.cpp" />
     <ClCompile Include="..\src\equations.cpp" />
     <ClCompile Include="..\src\ide.cpp" />
     <ClCompile Include="..\src\inputpage.cpp" />
@@ -48,6 +49,7 @@
     <ClInclude Include="..\src\basecase.h" />
     <ClInclude Include="..\src\case.h" />
     <ClInclude Include="..\src\casewin.h" />
+    <ClInclude Include="..\src\defaultsmanager.h" />
     <ClInclude Include="..\src\equations.h" />
     <ClInclude Include="..\src\ide.h" />
     <ClInclude Include="..\src\inputpage.h" />
