--- a/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
@@ -80,6 +80,9 @@
     <ClInclude Include="..\src\defaultsmanager.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\graph.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -146,6 +149,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\defaultsmanager.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\graph.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
