--- a/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClInclude Include="..\src\graph.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\xlautomation.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -152,6 +155,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\graph.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\xlautomation.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
