added 3d shading codes to SAM - added project file for standalone version on win32

--- a/osx_wx3/Makefile
+++ b/osx_wx3/Makefile
@@ -28,7 +28,9 @@ OBJECTS = ide.o \
 	main.o \
 	equations.o \
 	inputpage.o \
-	uiwidgets.o \
+	uiobjects.o \
+	adjfac.o \
+	widgets.o \
 	variables.o \
 	project.o \
 	object.o \
