--- a/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
@@ -29,9 +29,6 @@
     <ClInclude Include="..\src\object.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\uiwidgets.h">
-      <Filter>Source</Filter>
-    </ClInclude>
     <ClInclude Include="..\src\variables.h">
       <Filter>Source</Filter>
     </ClInclude>
@@ -83,6 +80,15 @@
     <ClInclude Include="..\src\graph.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\uiobjects.h">
+      <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\widgets.h">
+      <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\adjfac.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -98,9 +104,6 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\object.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\uiwidgets.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\variables.cpp">
@@ -152,6 +155,15 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\graph.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\uiobjects.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\widgets.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\adjfac.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
