--- a/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
@@ -89,6 +89,9 @@
     <ClInclude Include="..\src\adjfac.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\variablegrid.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -164,6 +167,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\adjfac.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\variablegrid.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
