--- a/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
@@ -92,6 +92,9 @@
     <ClInclude Include="..\src\variablegrid.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\reports.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -170,6 +173,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\variablegrid.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\reports.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
