ported select variable dialog, excel exchange dialog (rewritten with single excel file and resizable dialog).

--- a/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
@@ -95,6 +95,9 @@
     <ClInclude Include="..\src\reports.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\excelexch.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -176,6 +179,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\reports.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\excelexch.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
