--- a/osx_wx3/Makefile
+++ b/osx_wx3/Makefile
@@ -18,6 +18,7 @@ LDFLAGS = `wx-config-3 --libs` `wx-config-3 --libs aui` `wx-config-3 --libs stc`
 OBJECTS = ide.o \
 	reports.o \
 	graph.o \
+	excelexch.o \
 	defaultsmanager.o \
 	simulation.o \
 	library.o \
