--- a/vc2013_wx3/SAMnt_vc2013.vcxproj
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="..\src\adjfac.cpp" />
     <ClCompile Include="..\src\excelexch.cpp" />
     <ClCompile Include="..\src\graph.cpp" />
+    <ClCompile Include="..\src\parametric.cpp" />
     <ClCompile Include="..\src\reports.cpp" />
     <ClCompile Include="..\src\results.cpp" />
     <ClCompile Include="..\src\case.cpp" />
@@ -55,6 +56,7 @@
     <ClInclude Include="..\src\adjfac.h" />
     <ClInclude Include="..\src\excelexch.h" />
     <ClInclude Include="..\src\graph.h" />
+    <ClInclude Include="..\src\parametric.h" />
     <ClInclude Include="..\src\reports.h" />
     <ClInclude Include="..\src\results.h" />
     <ClInclude Include="..\src\case.h" />
