--- a/vc2013_wx3/SAMnt_vc2013.vcxproj
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="..\src\excelexch.cpp" />
     <ClCompile Include="..\src\graph.cpp" />
     <ClCompile Include="..\src\parametric.cpp" />
+    <ClCompile Include="..\src\registration.cpp" />
     <ClCompile Include="..\src\reports.cpp" />
     <ClCompile Include="..\src\results.cpp" />
     <ClCompile Include="..\src\case.cpp" />
@@ -57,6 +58,7 @@
     <ClInclude Include="..\src\excelexch.h" />
     <ClInclude Include="..\src\graph.h" />
     <ClInclude Include="..\src\parametric.h" />
+    <ClInclude Include="..\src\registration.h" />
     <ClInclude Include="..\src\reports.h" />
     <ClInclude Include="..\src\results.h" />
     <ClInclude Include="..\src\case.h" />
