Add gridsupport.cpp and gridsupport.h for parametric and variable grids with base class to support choice selections when sorting. Also, all editors contained in gridsupport.cpp

--- a/vc2013_wx3/SAMnt_vc2013.vcxproj
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="..\src\adjfac.cpp" />
     <ClCompile Include="..\src\excelexch.cpp" />
     <ClCompile Include="..\src\graph.cpp" />
+    <ClCompile Include="..\src\gridsupport.cpp" />
     <ClCompile Include="..\src\parametric.cpp" />
     <ClCompile Include="..\src\registration.cpp" />
     <ClCompile Include="..\src\reports.cpp" />
@@ -57,6 +58,7 @@
     <ClInclude Include="..\src\adjfac.h" />
     <ClInclude Include="..\src\excelexch.h" />
     <ClInclude Include="..\src\graph.h" />
+    <ClInclude Include="..\src\gridsupport.h" />
     <ClInclude Include="..\src\parametric.h" />
     <ClInclude Include="..\src\registration.h" />
     <ClInclude Include="..\src\reports.h" />
