--- a/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
@@ -104,6 +104,9 @@
     <ClInclude Include="..\src\registration.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\gridsupport.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -194,6 +197,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\registration.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\gridsupport.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
