--- a/deploy/runtime/webapis.conf
+++ b/deploy/runtime/webapis.conf
@@ -3,5 +3,5 @@
 website=http://sam.nrel.gov
 forum=http://sam.nrel.gov
 support_email=mailto:sam.support@nrel.gov
-registration=http://samreg.devstage.nrel.gov/api/sam/v1/tracker
+registration=https://developer.nrel.gov/api/sam/v1/tracker
 messages=https://sam.nrel.gov/files/content/updates/messages.html
