--- a/deploy/runtime/webapis.conf
+++ b/deploy/runtime/webapis.conf
@@ -1,7 +1,7 @@
 ' web api configuration file for SAM
 
 website=http://sam.nrel.gov
-forum=http://sam.nrel.gov
+forum=https://sam.nrel.gov/forums/support-forum
 support_email=mailto:sam.support@nrel.gov
 registration=https://developer.nrel.gov/api/sam/v1/tracker
 messages=https://sam.nrel.gov/files/content/updates/messages.html
