--- a/deploy/runtime/webapis.conf
+++ b/deploy/runtime/webapis.conf
@@ -5,3 +5,4 @@ forum=https://sam.nrel.gov/forums/support-forum
 support_email=mailto:sam.support@nrel.gov
 registration=https://developer.nrel.gov/api/sam/v1/tracker
 messages=https://sam.nrel.gov/files/content/updates/messages.html
+release_notes=https://sam.nrel.gov/sites/sam.nrel.gov/files/content/updates/releasenotes.html
