--- a/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
@@ -122,6 +122,9 @@
     <ClInclude Include="..\src\s3view.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\solarprospector.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -230,6 +233,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\s3view.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\solarprospector.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
