Added solar prospector dialog box

--- a/deploy/runtime/webapis.conf
+++ b/deploy/runtime/webapis.conf
@@ -6,3 +6,6 @@ support_email=mailto:sam.support@nrel.gov
 registration=https://developer.nrel.gov/api/sam/v1/tracker
 messages=https://sam.nrel.gov/sites/sam.nrel.gov/files/content/updates/messages.html
 release_notes=https://sam.nrel.gov/sites/sam.nrel.gov/files/content/updates/releasenotes.html
+prospector_year=http://mapsdb.nrel.gov/sp_data/hourly_9809/<DIR>/radwx_<GRIDCODE>_<YEAR>.tm2.gz
+prospector_typical=http://mapsdb.nrel.gov/sp_data/<TYPE>_9809/<DIR>/radwx_<GRIDCODE>_9809.tm2.gz	
+'<TYPE> can be tmy, tgy, or tdy
