--- a/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
@@ -125,6 +125,9 @@
     <ClInclude Include="..\src\solarprospector.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\p50p90.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -236,6 +239,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\solarprospector.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\p50p90.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
