--- a/deploy/runtime/webapis.conf
+++ b/deploy/runtime/webapis.conf
@@ -9,3 +9,4 @@ release_notes=https://sam.nrel.gov/sites/sam.nrel.gov/files/content/updates/rele
 prospector_year=http://mapsdb.nrel.gov/sp_data/hourly_9809/<DIR>/radwx_<GRIDCODE>_<YEAR>.tm2.gz
 prospector_typical=http://mapsdb.nrel.gov/sp_data/<TYPE>_9809/<DIR>/radwx_<GRIDCODE>_9809.tm2.gz	
 '<TYPE> can be tmy, tgy, or tdy
+historical_nsrdb=https://sam.nrel.gov/NSRDB
